--- a/textapi.ipynb
+++ b/textapi.ipynb
@@ -46,7 +46,7 @@
     "import os, requests, uuid, json\n",
     "\n",
     "\n",
-    "subscriptionKey = 'f01ea709061c402cae38631e56ff5f81'\n",
+    "subscriptionKey = 'your_key_here'\n",
     "\n",
     "\n",
     "# If you encounter any issues with the base_url or path, make sure\n",
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "subscriptionKey = '12e3ff02506143479eb28bf3f707d87e'\n",
+    "subscriptionKey = 'your_key_here'\n",
     "\n",
     "text_analytics_base_url = \"https://southcentralus.api.cognitive.microsoft.com/text/analytics/v2.0/\"\n",
     "sentiment_api_url = text_analytics_base_url + \"sentiment\"\n",
